--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="https://kit.fontawesome.com/4f3ce16e3e.js" crossorigin="anonymous"></script>
   
 <head>
-<title>HAPPY BIRTHDAY</title>
+<title>24/10</title>
 <link rel="icon" type="image/x-icon" href="https://www.palingit.com/favicon.ico">
 <meta name="description" content="HTML Replit Coding">
 <!-- 
@@ -69,7 +69,7 @@
 
        <p id="pesan2">Loading...</p>
        <!-- Pesan -->
-       <p id="pesan3">SUPRISE❤️</p>
+       <p id="pesan3">SURPRISE❤️</p>
        <p id="pesan4">Happy Birthday </p>
        <p id="pesan5" class="gaya2">Lâu ngày không gặp</p>
        <p id="pesan6" class="gaya2">Không biết bạn có giỏi hơn không ta</p>
@@ -80,12 +80,12 @@
         Nhưng ngày sinh của cậu, tui vẫn nhớ để chúc mừng nhé. Vậy nên sau này có gặp nhau vẫn còn nhớ tên nhau là ổn ròi không cần cao xa.
         Tuy vậy mốt mà gặp nhau thật thì nhớ dùm lun ngày sinh để chúc nhẹ nhau nha chứ không buồn đó.
        </p>
-       <p id="pesan9" class="gaya2">vậy thôi tui chỉ có thể chúc bạn sớm ngày thành công, càng hoàn thiện bản thân hơn và đẹp hơn nhó.</p>
+       <p id="pesan9" class="gaya2">vậy thôi tui chỉ có thể chúc bạn sớm ngày thành công, đạt vinh quang tương sáng, đỉnh cao nhân sinh và luôn xinh hơn nhó.</p>
        <p id="pesan10" class="gaya2">       
         Happy Level Up Day!!🥳
       </p>      
        <!-- Tombol Lanjut -->
-       <p id="opsL">phuc</p>
+       <p id="opsL">phúc</p>
      </blockquote></div>
 
      <!-- Tombol Kirim Pesan -->
